April 4th, 2009 -- 0.3 - Release!
Works a lot better now.

April 3th, 2009 -- 0.2 - Release!
Lots of fixes.  It actually works somewhat.

March 3rd, 2009 -- 0.1 - Released!
The initial release of the new portable libcopynes is out!